# pytest-beacon

./: CHANGELOG.md  README.md  pyproject.toml
docs/: PUBLISHING.md  ddd-architecture-rules.md  logging-rules.md
src/pytest_beacon/: __init__.py
src/pytest_beacon/config/: settings.py
src/pytest_beacon/domains/test_run/: __init__.py  entities.py  value_objects.py
src/pytest_beacon/entry_points/pytest_plugin/: __init__.py  hooks.py  options.py  xdist.py
src/pytest_beacon/infrastructure/exporters/: __init__.py  base.py  file_exporter.py  http_exporter.py
src/pytest_beacon/infrastructure/formatters/: __init__.py  ctrf.py
src/pytest_beacon/infrastructure/observability/: __init__.py  logging.py
tests/: test_entities.py  test_exporters.py  test_formatter.py  test_helpers.py  test_logging.py  test_plugin_e2e.py
