[build-system]
requires = ["uv_build>=0.9.30"]
build-backend = "uv_build"

[project]
name = "pytest-beacon"
version = "0.1.0"
description = "Highly customizable pytest reporting plugin combining AI-optimized CTRF reports and rich test metrics"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    # Configuration and logging
    "pydantic-settings>=2.0.0",
    "structlog>=25.1.0",

    # Data validation
    "pydantic>=2.0.0",

    # Test framework
    "pytest>=9.0.0",

    # HTTP export
    "httpx>=0.28.1",

    # Report serialization
    "pyyaml>=6.0",
]

[project.entry-points.pytest11]
beacon = "pytest_beacon.entry_points.pytest_plugin.hooks"

[dependency-groups]
dev = [
    "pytest-xdist>=3.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "ty>=0.0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.uv]
package = true
